Wed Mar  2 14:50:02 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/include/ast_home.h:
        * TAO_IDL/ast/ast_home.cpp:
          Added a function that transfers elements from home to interface and
          zeros those elements in home. This is necessary for correct cleanup.

        * TAO_IDL/be/be_visitor_xplicit_pre_proc.cpp:
          Added copying of exception list for operations defined in home
          when it needs to create an Explicit interface. This is also for
          cleanup.

Mon Feb 28 14:31:52 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * TAO_IDL/ast/ast_home.cpp:
        * TAO_IDL/ast/ast_valuetype_fwd.cpp:
        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:
          Fixed memory leaks in tao_idl.

Sat Feb 26 14:24:07 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/pi.mpb:

          Reverting the earlier change. There are some libraries that
          partially depend on PI, and so they can tolerate not having
          interceptors and still function. For example TAO_Strategies.

Sat Feb 26 03:27:16 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * MPC/config/endpointpolicy.mpb:
        * MPC/config/pi.mpb:

          Ensure that projects that depend on these do not get built in
          minimim, compact, or micro configurations.

        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Do not attept to run the tests that don't get built by the above
          build restrictions.

Wed Feb 23 10:34:17 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/Connector_Impl.cpp:
        * tao/IIOP_Connector.cpp:
        * tao/IIOP_Connector.h:
        * tao/Strategies/UIOP_Connector.cpp:
        * tao/Strategies/SHMIOP_Connector.h:
        * tao/Strategies/UIOP_Connector.h:
        * tao/Strategies/SCIOP_Connector.h:
        * tao/Strategies/SHMIOP_Connector.cpp:
        * tao/Strategies/SCIOP_Connector.cpp: